Bug 157118 - Constant expansion of Navigator objects when single object is deleted in Draw
Summary: Constant expansion of Navigator objects when single object is deleted in Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.3 rc
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2023-09-06 12:54 UTC by grofaty
Modified: 2025-10-15 08:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Page1_gets_expanded.gif (85.98 KB, image/gif)
2023-09-21 05:25 UTC, grofaty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2023-09-06 12:54:08 UTC
Description:
Navigator's all pages are constantly expanded when one object is deleted from particular page.

Steps to Reproduce:
1. Open Draw.
2. In first page draw e.g. Ellipse.
3. Page | New Page.
4. Draw Rectangle on second page.
5. On right site make sure Navigator is displayed. Currently it is displayed:
   -Page 1
   --Shape 1
   -Page 2
   --Shape 1
5. Click on icon in front of "Page 1" to collapse all objects in "Page 1".
6. Click on last object "Shape 1" on Page 2. "Page 1" is still collapsed as expected.
7. Press Delete button and "Shape 1" on "Page 2" is correctly deleted. But now problem appears.

Actual Results:
"Page 1" gets expended from collapsed state, despite I haven't clicked in front of "Page 1" to expand.

Now imagine instead of having just one object, having 50 objects per page and Pages gets constantly expanded.

Expected Results:
Pages in Navigator should not get automatically expanded if I have previously selected to collapse it.


Reproducible: Always


User Profile Reset: No

Additional Info:
Tested on Windows 10 and Ubuntu 23.04.

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: sl-SI (en_SI); UI: en-US
Calc: threaded

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: sl-SI (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 grofaty 2023-09-21 05:25:18 UTC
Created attachment 189725 [details]
Page1_gets_expanded.gif
Comment 2 grofaty 2023-09-21 05:27:10 UTC
I have since reporting a problem to today migrated from 7.5 to 7.6 version and problem still exists.

In my previous post I have screen recorded from my first post's step 5.

Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: sl-SI (en_SI); UI: en-US
Calc: threaded
Comment 3 Stéphane Guillou (stragu) 2023-09-28 13:18:50 UTC
Confirmed the behaviour in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2902ab24ecc5ffbf4907ea83b2028508b9de6364
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: es-MX (en_AU.UTF-8); UI: en-US
Calc: threaded

This happens too in 7.2.0.3, when shapes started being listed in the Navigator.

It also happens to all collapsed pages in the navigator, and even if objects remain on the page after deleting one.
I can see how it would be annoying with a complex document.
Same in Impress

Jim, maybe you are interested?
Somewhat related: bug 157117.
Comment 4 QA Administrators 2025-09-28 03:11:56 UTC Comment hidden (noise)
Comment 5 grofaty 2025-09-29 13:31:19 UTC
As requested I tested on LibreOffice 25.8.1.1 and the problem is even worse now as it used to be:

After step 7, rectangle object is deleted from Page 2. On Navigator:
- Page 1 is NOT expended which is fine but
- Page 2 "Shape 1" is still displayed despite rectangle object is deleted from page 2.

Work-around. Click on page 1 and then on page 2 and now in Navigate object "Shape 1" actually disappears.
Comment 6 Commit Notification 2025-10-15 00:09:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/afdeaa332557e3387abbb2db62d515ec25576222

Resolves tdf#157118 Constant expansion of Navigator objects when single

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.