Resolves tdf#157118 Constant expansion of Navigator objects when single

object is deleted in Draw

Change-Id: I221e543d9272362ea2814879eb3db6c68268be76
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192005
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>